src/objects/Apttus__DocumentVersion__c/Apttus__DocumentVersion__c.object-meta.xml
<CustomObject>
    <description>Represents a document version</description>
    <label>Document Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>