src/objects/Apttus__DocumentVersion__c/fields/Apttus__CustomObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CustomObjectId__c</fullName>
    <description>ID of the custom object associated with the document version</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of the custom object associated with the document version</inlineHelpText>
    <label>Custom Object Id (Deprecated)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>