src/objects/Apttus__DocumentVersion__c/fields/Apttus__LatestReviewCycleStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LatestReviewCycleStatus__c</fullName>
    <description>holds the status of the latest review cycle for this document.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Review Cycle Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>