src/objects/Apttus__DocumentVersion__c/fields/Apttus__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the template associated with the version</description>
    <inlineHelpText>ID of the template associated with the version</inlineHelpText>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Document Versions</relationshipLabel>
    <relationshipName>DocumentVersions</relationshipName>
    <type>Lookup</type>
</CustomField>